2012-04-10  Jakub Jelinek  <jakub@redhat.com>

	* src/dwarf2.c (DEBUG_MACRO): Define.
	(debug_sections): Add .debug_macro entry.

2012-04-02  Jakub Jelinek  <jakub@redhat.com>

	* src/dwarf2.c (adjust_attributes): For DWARF4+ treat
	DW_AT_data_member_location with DW_FORM_data[48] as
	large constant instead of loclistptr.

2011-10-12  Jakub Jelinek  <jakub@redhat.com>

	* src/main.c (layout_page_size): New variable.
	(OPT_LAYOUT_PAGE_SIZE): Define.
	(options): Add --layout-page-size option.
	(set_default_layout_page_size): New function in i?86/x86_64
	resp. empty macro on other architectures.
	(main): Call it.
	* src/arch-i386.c (i386_layout_libs_init): Fail if
	l->max_page_size is larger than 2MB and exec_shield is true.
	Compute reg0s as REG0S rounded up to l->max_page_size
	boundary and use it instead of REG0S.
	(i386_layout_libs_pre): Compute reg0s as REG0S rounded up to
	l->max_page_size boundary and use it instead of REG0S.
	Fix up a pasto in computation of virt parameter for
	third i386_find_free_addr call.
	* src/prelink.h (layout_page_size): New decl.
	* src/layout.c (layout_libs): Set max_page_size and
	l.max_page_size to maximum of plarch->max_page_size
	and layout_page_size.  Fail if mmap_base or mmap_end
	aren't max_page_size aligned.
	* src/arch-ppc.c (ppc_layout_libs_pre): Give up if
	l->max_page_size is larger than 64KB.

2011-08-26  Jakub Jelinek  <jakub@redhat.com>

	* testsuite/cxx3.sh: Expect fewer conflicts.

	* src/arch-arm.c (PL_ARCH): Change .dynamic_linker to
	/lib/ld-linux.so.3.

2011-08-25  Jakub Jelinek  <jakub@redhat.com>

	* src/gather.c (gather_func): When looking for PT_PHDR header,
	skip any PT_LOPROC ... PR_HIPROC phdrs.

	* testsuite/cxx1.sh: Don't check for any "Removing C++ conflict"
	messages on arm.
	* testsuite/cxx2.sh: Likewise.
	* testsuite/cxx3.sh: New test.
	* testsuite/cxx3.C: New file.
	* testsuite/cxx3.h: New file.
	* testsuite/cxx3lib1.C: New file.
	* testsuite/cxx3lib2.C: New file.